index.css
/* http://meyerweb.com/eric/tools/css/reset/ */
/* v1.0 | 20080212 */
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
font,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
button {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
}

body {
  line-height: 1;
}

ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}

/* remember to define focus styles! */
:focus {
  outline: 0;
}

/* remember to highlight inserts somehow! */
ins {
  text-decoration: none;
}

del {
  text-decoration: line-through;
}

/* tables still need 'cellspacing="0"' in the markup */
table {
  border-collapse: collapse;
  border-spacing: 0;
}

#top-nav {
  background: #00023d;
  padding: 25px 0;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 99;
  width: 100%;
}

.container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 0 24px;
}
@container body (min-width: 1024px) {
  .container {
    padding: 0 150px;
    justify-content: space-between;
  }
}
@container body (min-width: 1240px) {
  .container {
    padding: 0 200px;
  }
}

.container > .site-nav.-open:before {
  content: "";
  display: block;
  position: absolute;
  background-color: rgba(0, 0, 0, 0.25);
  width: 100vw;
  height: 100vh;
  top: 0;
  z-index: 100;
}
@container body (min-width: 1024px) {
  .container > .site-nav.-open:before {
    display: none;
  }
}

.logo:focus {
  outline: 2px dashed #ffffff;
  outline-offset: 5px;
}
.logo.-mobile {
  display: flex;
  flex-direction: column;
}
@container body (min-width: 1024px) {
  .logo.-mobile {
    display: none;
  }
}
.logo.-desktop {
  display: none;
}
@container body (min-width: 1024px) {
  .logo.-desktop {
    display: block;
  }
}
.logo img {
  width: 32px;
  height: 32px;
}
@container body (min-width: 1024px) {
  .logo img {
    width: 48px;
    height: 48px;
  }
}

#hamburgerNavOpenButton {
  box-sizing: border-box;
  height: 48px;
  width: 48px;
  padding: 15px 12px;
  margin-right: calc((100% - 140px) / 2);
  cursor: pointer;
}
#hamburgerNavOpenButton:focus {
  outline: 2px dashed #ffffff;
  outline-offset: 6px;
}
@container body (min-width: 1024px) {
  #hamburgerNavOpenButton {
    display: none;
  }
}

#hamburger1,
#hamburger2,
#hamburger3 {
  margin-bottom: 6px;
  display: block;
  width: calc(100% - 2px);
  border: 1px solid #ffffff;
  border-radius: 2px;
}

#hamburger3 {
  width: 58%;
  margin-bottom: 0;
}

#hamburgerNavCloseButton {
  color: #ffffff;
  position: absolute;
  right: -45px;
  margin-top: 32px;
  width: 24px;
  height: 24px;
}
#hamburgerNavCloseButton:focus {
  outline: 2px dashed #ffffff;
  outline-offset: 5px;
}
@container body (min-width: 1024px) {
  #hamburgerNavCloseButton {
    display: none;
  }
}

.site-nav {
  background: #00023d;
  display: flex;
  flex-direction: column;
  height: 100vh;
  left: 0;
  top: 0;
  min-width: 295px;
  position: absolute;
  visibility: hidden;
}
.site-nav.-open {
  visibility: visible;
  z-index: 101;
}
@container body (min-width: 1024px) {
  .site-nav {
    align-items: center;
    background: none;
    flex-direction: row;
    height: auto;
    justify-content: space-between;
    position: static;
    width: 100%;
    visibility: visible;
  }
}

.site-nav-links {
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding: 64px 32px 0 32px;
  text-align: left;
}
@container body (min-width: 1024px) {
  .site-nav-links {
    flex-direction: row;
    padding: 0;
  }
}
@container body (min-width: 1240px) {
  .site-nav-links {
    gap: 48px;
  }
}
.site-nav-links li {
  position: relative;
}
.site-nav-links li a {
  color: #ffffff;
  font-size: 1.5rem;
  text-decoration: none;
  opacity: 0.3;
  font-weight: 400;
}
@container body (min-width: 1024px) {
  .site-nav-links li a {
    font-size: 0.875rem;
  }
}

.site-nav-links a {
  color: #ffffff;
  text-decoration: none;
  opacity: 0.3;
  font-weight: 400;
}
.site-nav-links a.-active:after {
  content: "";
  display: block;
  position: absolute;
  width: 14px;
  border-bottom: 1px solid #ffffff;
  margin-top: 2px;
}
@container body (min-width: 1024px) {
  .site-nav-links a.-active:after {
    left: 0;
    right: 0;
    margin: 2px auto 0;
  }
}
.site-nav-links a.-active, .site-nav-links a:hover, .site-nav-links a:focus {
  opacity: 1;
}
@container body (min-width: 1024px) {
  .site-nav-links a.-active, .site-nav-links a:hover, .site-nav-links a:focus {
    font-weight: 500;
  }
}

.social-nav-container {
  margin-top: auto;
  padding-bottom: 31px;
}
@container body (min-width: 1024px) {
  .social-nav-container {
    margin-top: 0;
    padding-bottom: 0;
  }
}

.social-nav {
  display: flex;
  width: max-content;
  margin: 0 auto;
  gap: 26px;
}
@container body (min-width: 1024px) {
  .social-nav {
    gap: 17px;
  }
}
.social-nav img {
  width: 22px;
}
@container body (min-width: 1024px) {
  .social-nav img {
    width: 15px;
  }
}

.copyright {
  font-size: 0.75rem;
  text-align: center;
  padding-top: 8px;
}
@container body (min-width: 1024px) {
  .copyright.-hamburgerMenu {
    display: none;
  }
}

#hero {
  display: flex;
  flex-direction: column;
  text-align: center;
  height: 100vh;
  padding: 0 24px;
}
@container body (min-width: 768px) {
  #hero {
    padding: 0 72px 0;
  }
}

#hero-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

#heroH1 {
  white-space: pre-line;
}
/* ... */

